--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,9 @@ debhelper (12.8) UNRELEASED; urgency=medium
   * dh: Reset umask to 0022 as a consistent default value.
     Thanks to Thorsten Glaser for the suggestion.
     (Closes: #944691)
+  * dh_missing: The --fail-missing parameter is now default
+    in compat 13.  Thanks to Mattia Rizzolo for the
+    suggestion.  (Closes: #917368)
 
   [ Helmut Grohne ]
   * Warn about missing perl-xs-dev for perl_* buildsystems.
