d/rules: Remove now redundant override
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -55,6 +55,8 @@ debhelper (12.8) UNRELEASED; urgency=medium
   * dh_link: Ditto.
   * dh_missing: Ditto.
   * dh_ucf: Ditto.
+  * debian/rules: Remove override for dh_missing as the
+    --fail-missing parameter is default now.
 
   [ Helmut Grohne ]
   * Warn about missing perl-xs-dev for perl_* buildsystems.
