--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.8) UNRELEASED; urgency=medium
+debhelper (12.8) unstable; urgency=medium
 
   [ Niels Thykier ]
   * Dh_Lib.pm: Simplify internal loggning of which commands
@@ -61,7 +61,7 @@ debhelper (12.8) UNRELEASED; urgency=medium
   [ Helmut Grohne ]
   * Warn about missing perl-xs-dev for perl_* buildsystems.
 
- -- Niels Thykier <niels@thykier.net>  Wed, 15 Jan 2020 21:04:25 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 19 Jan 2020 10:02:16 +0000
 
 debhelper (12.7.3) unstable; urgency=medium
 
