--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (12.8.1) UNRELEASED; urgency=medium
+
+  * debhelper.7: Clarify how DH_OPTIONS works and that some
+    third-party tools may ignore it if they do not support
+    it.  Thanks to Andrej Shadura for reporting the issue
+    over IRC.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 19 Jan 2020 10:43:39 +0000
+
 debhelper (12.8) unstable; urgency=medium
 
   [ Niels Thykier ]
