PROGRAMMING: Add a section for NOOP PROMISES
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ debhelper (12.8.1) UNRELEASED; urgency=medium
     third-party tools may ignore it if they do not support
     it.  Thanks to Andrej Shadura for reporting the issue
     over IRC.
+  * doc/PROGRAMMING: Introduce a section on the NOOP PROMISE
+    comment.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 19 Jan 2020 10:43:39 +0000
 
