--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.8.1) UNRELEASED; urgency=medium
+debhelper (12.9) UNRELEASED; urgency=medium
 
   * debhelper.7: Clarify how DH_OPTIONS works and that some
     third-party tools may ignore it if they do not support
@@ -6,6 +6,9 @@ debhelper (12.8.1) UNRELEASED; urgency=medium
     over IRC.
   * doc/PROGRAMMING: Introduce a section on the NOOP PROMISE
     comment.
+  * dh: In compat 13, skip calls to hook and override targets
+    for dh_auto_test, dh_dwz and dh_strip.  Thanks to
+    Mike Hommey for suggesting it.  (Closes: #568897)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 19 Jan 2020 10:43:39 +0000
 
