d/changelog: Improve wording for 12.8 change
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,9 @@ debhelper (12.9) UNRELEASED; urgency=medium
   * Dh_Getopt.pm: Remove support for "--ignore".  No package
     uses it any more.  For most parts, it has been replaced
     by the "3.0 (quilt)" source format.
+  * debian/changelog: Clarify that substitutions change in
+    12.8 only apply to the maintscript file (and not
+    maintainer scripts) for dh_installdeb.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 19 Jan 2020 10:43:39 +0000
 
@@ -62,7 +65,7 @@ debhelper (12.8) unstable; urgency=medium
   * dh_install: Support substitution configuration files.
   * dh_clean: Ditto.
   * dh_installcatalogs: Ditto.
-  * dh_installdeb: Ditto (maintscripts only).
+  * dh_installdeb: Ditto (debian/*.maintscripts only).
   * dh_installdirs: Ditto.
   * dh_installdocs: Ditto.
   * dh_installexamples: Ditto.
