debhelper.pod: Fix typos
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -124,7 +124,7 @@ The following expansions are available:
 Expands to the relevant L<dpkg-architecture(1)> value (similar to
 I<dpkg-architecture -qVARIABLE_HERE>).
 
-When in doubt, the B<DEB_HOST_*> variant is the one will work both
+When in doubt, the B<DEB_HOST_*> variant is the one that will work both
 for native and cross builds.
 
 For performance reasons, debhelper will attempt to resolve these
