--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ debhelper (12.9) UNRELEASED; urgency=medium
   * debian/changelog: Clarify that substitutions change in
     12.8 only apply to the maintscript file (and not
     maintainer scripts) for dh_installdeb.
+  * debhelper.7: Improve text in compat 13 section.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 19 Jan 2020 10:43:39 +0000
 
