--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,10 @@ debhelper (12.9) UNRELEASED; urgency=medium
     12.8 only apply to the maintscript file (and not
     maintainer scripts) for dh_installdeb.
   * debhelper.7: Improve text in compat 13 section.
+  * autoconf.pm: Only consider "configure" as an autoconf
+    script if it is a file (and not a directory).  Thanks to
+    Andrius Merkys for reporting the bug and providing a
+    patch.  (Closes: #949396)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 19 Jan 2020 10:43:39 +0000
 
