--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,8 @@ debhelper (12.9) UNRELEASED; urgency=medium
     script if it is a file (and not a directory).  Thanks to
     Andrius Merkys for reporting the bug and providing a
     patch.  (Closes: #949396)
+  * debian/control: Bump Standards-Version to 4.5.0 - no
+    changes required.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 19 Jan 2020 10:43:39 +0000
 
