dh_s{hlibdeps,trip}: Pass -- before the file name when calling file(1)
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,10 @@ debhelper (12.9) UNRELEASED; urgency=medium
     patch.  (Closes: #949396)
   * debian/control: Bump Standards-Version to 4.5.0 - no
     changes required.
+  * dh_shlibdeps: Pass "--" in front of filenames passed to
+    file(1).  Thanks to Christoph Biedl for the suggestion.
+    (Closes: #949538)
+  * dh_strip: Ditto
 
  -- Niels Thykier <niels@thykier.net>  Sun, 19 Jan 2020 10:43:39 +0000
 
