Allow explicitly setting buildsystem to “none”
Closes: #949635

Signed-off-by: mirabilos <tg@debian.org>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -320,6 +320,8 @@ B<dh_auto_>I<*> programs.
 Force use of the specified I<buildsystem>, instead of trying to auto-select
 one which might be applicable for the package.
 
+Pass B<none> as I<buildsystem> to disable auto-selection.
+
 =item B<-D>I<directory>, B<--sourcedir=>I<directory>, B<--sourcedirectory=>I<directory>
 
 Assume that the original package source tree is at the specified
