debhelper.pod: Fix dh_install manpage link
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -105,7 +105,7 @@ easy to read, understand, and modify.
 
 In compatibility level 13 and later, it is possible to use simple
 substitutions in I<some> debhelper config files (particularly,
-the configuration files for L<dh_install>).
+the configuration files for L<dh_install(1)>).
 
 All substitution variables are of the form I<${foo}> and the braces
 are mandatory.  Variable names are case-sensitive and consist of
