d/changelog: Document Thorsten Glaser's changes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 debhelper (12.9) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * debhelper.7: Clarify how DH_OPTIONS works and that some
     third-party tools may ignore it if they do not support
     it.  Thanks to Andrej Shadura for reporting the issue
@@ -26,6 +27,12 @@ debhelper (12.9) UNRELEASED; urgency=medium
     file(1).  Thanks to Christoph Biedl for the suggestion.
     (Closes: #949538)
   * dh_strip: Ditto
+
+  [ Thorsten Glaser ]
+  * dh_auto_*: Make it possible to disable build systems by
+    passing --buildsystem=none.  Previously this would
+    require overriding each and every dh_auto_* tool.
+    (Closes: #949635)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 19 Jan 2020 10:43:39 +0000
 
