dh.1: Improve override + hook target documentation
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,9 @@ debhelper (12.9) UNRELEASED; urgency=medium
     file(1).  Thanks to Christoph Biedl for the suggestion.
     (Closes: #949538)
   * dh_strip: Ditto
+  * dh.1: Improve documentation for override targets and
+    include a section on the new hook target.
+    (Closes: #885994)
 
   [ Thorsten Glaser ]
   * dh_auto_*: Make it possible to disable build systems by
