--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.9) UNRELEASED; urgency=medium
+debhelper (12.9) unstable; urgency=medium
 
   [ Niels Thykier ]
   * debhelper.7: Clarify how DH_OPTIONS works and that some
@@ -51,7 +51,7 @@ debhelper (12.9) UNRELEASED; urgency=medium
     require overriding each and every dh_auto_* tool.
     (Closes: #949635)
 
- -- Niels Thykier <niels@thykier.net>  Sun, 19 Jan 2020 10:43:39 +0000
+ -- Niels Thykier <niels@thykier.net>  Mon, 27 Jan 2020 20:45:05 +0000
 
 debhelper (12.8) unstable; urgency=medium
 
