po4a.cfg: Correct name of dh_installinitramfs.pod
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -41,6 +41,9 @@ debhelper (12.9) UNRELEASED; urgency=medium
     Addons depending on the previous behaviour may now fail
     due to calls to undefined subroutintes and will need to
     be fixed.
+  * dh_installinitramfs.1: Correct the name of localized
+    versions of dh_installinitramfs so that man can find
+    them.
 
   [ Thorsten Glaser ]
   * dh_auto_*: Make it possible to disable build systems by
