dh_installsystemd.1: In c13, tmpfiles are handled by a new helper
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (12.9.1) UNRELEASED; urgency=medium
+
+  * dh_installsystemd.1: Improve documentation about tmpfiles that
+    are now handled by dh_installtmpfiles in compat 13.
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 01 Feb 2020 08:58:04 +0000
+
 debhelper (12.9) unstable; urgency=medium
 
   [ Niels Thykier ]
