dh_installtmpfiles: Prefer d/tmpfiles over d/tmpfile
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -1119,6 +1119,10 @@ default sequence.  The B<dh_installtmpfiles> takes over handling of
 tmpfiles.d configuration files.  Related functionality in
 B<dh_installsystemd> is now disabled.
 
+Note that B<dh_installtmpfiles> responds to
+F<< debian/I<package>.tmpfiles >> where B<dh_installsystemd> used
+a name without the trailing "s".
+
 =item -
 
 Many B<dh_*> tools now support limited variable expansion via the
