--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ debhelper (12.9.1) UNRELEASED; urgency=medium
 
   * dh_installsystemd.1: Improve documentation about tmpfiles that
     are now handled by dh_installtmpfiles in compat 13.
+  * dh_installtmpfiles: Prefer debian/package.tmpfiles over
+    debian/package.tmpfile, but accept the old path with a warning.
+    Thanks to Michael Biebl for suggesting the change.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 01 Feb 2020 08:58:04 +0000
 
