dh_strip: Strip LTO symbols from static archives
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,11 @@ debhelper (12.9.1) UNRELEASED; urgency=medium
   * dh_installtmpfiles: Prefer debian/package.tmpfiles over
     debian/package.tmpfile, but accept the old path with a warning.
     Thanks to Michael Biebl for suggesting the change.
+  * dh_strip: Automatically strip Link-Time Optimization (LTO)
+    symbols from static archives.  The format is not stable between
+    compiler versions.  Thanks to Matthias Klose for the
+    suggestion and for providing the exact options.
+    (Closes: #939656)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 01 Feb 2020 08:58:04 +0000
 
