cmake: verbose autogen rules

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 debhelper (12.9.1) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * dh_installsystemd.1: Improve documentation about tmpfiles that
     are now handled by dh_installtmpfiles in compat 13.
   * dh_installtmpfiles: Prefer debian/package.tmpfiles over
@@ -10,6 +11,9 @@ debhelper (12.9.1) UNRELEASED; urgency=medium
     compiler versions.  Thanks to Matthias Klose for the
     suggestion and for providing the exact options.
     (Closes: #939656)
+
+  [ Nicholas Guriev ]
+  * cmake: Verbose autogen rules.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 01 Feb 2020 08:58:04 +0000
 
