Update German manpage translation
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,9 @@ debhelper (12.9.1) UNRELEASED; urgency=medium
   [ Nicholas Guriev ]
   * cmake: Verbose autogen rules.
 
+  [ Translations ]
+  * Update German translation (Chris Leick)  (Closes: #951917)
+
  -- Niels Thykier <niels@thykier.net>  Sat, 01 Feb 2020 08:58:04 +0000
 
 debhelper (12.9) unstable; urgency=medium
