dh_installsystemduser: Fix bug with parameterized services
(Heavily based on code provided by Andy Caldwell in
https://bugs.debian.org/951819)

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,10 @@ debhelper (12.9.1) UNRELEASED; urgency=medium
   * cmake: Skip install all dependency with compatibility level 13 and
     above.
 
+  [ Andy Caldwell ]
+  * dh_installsystemduser: Fix bug that prevented dh_installsystemduser
+    from installing parameterized services.  (Closes: #951819)
+
   [ Translations ]
   * Update German translation (Chris Leick)  (Closes: #951917)
 
