--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.9.1) UNRELEASED; urgency=medium
+debhelper (12.10) unstable; urgency=medium
 
   [ Niels Thykier ]
   * dh_installsystemd.1: Improve documentation about tmpfiles that
@@ -31,7 +31,7 @@ debhelper (12.9.1) UNRELEASED; urgency=medium
   [ Translations ]
   * Update German translation (Chris Leick)  (Closes: #951917)
 
- -- Niels Thykier <niels@thykier.net>  Sat, 01 Feb 2020 08:58:04 +0000
+ -- Niels Thykier <niels@thykier.net>  Tue, 24 Mar 2020 15:55:09 +0000
 
 debhelper (12.9) unstable; urgency=medium
 
