--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (12.10.1) UNRELEASED; urgency=medium
+
+  * debian/changelog: Fix typo of a bug number in the 12.10
+    entry.  Thanks to Andy Caldwell for reporting it.
+
+ -- Niels Thykier <niels@thykier.net>  Wed, 25 Mar 2020 18:28:58 +0000
+
 debhelper (12.10) unstable; urgency=medium
 
   [ Niels Thykier ]
@@ -17,7 +24,7 @@ debhelper (12.10) unstable; urgency=medium
   * dh,dh_installsytemd*: Work around broken NOOP promise caused by
     dh_installsystemd* using nonstandard "package@" prefix for
     pkgfiles.  Thanks to Badreddin Aboubakr and Andy Caldwell for
-    reporting it.  (Closes: #950723, #951819)
+    reporting it.  (Closes: #950723, #951820)
 
   [ Nicholas Guriev ]
   * cmake: Verbose autogen rules.
