d/changelog: Document Helmut's changes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-debhelper (12.10.1) UNRELEASED; urgency=medium
+debhelper (12.10.1) unstable; urgency=medium
 
+  [ Niels Thykier ]
   * debian/changelog: Fix typo of a bug number in the 12.10
     entry.  Thanks to Andy Caldwell for reporting it.
   * Dh_Lib.pm: Flag compat 9 as deprecated as announced in
@@ -10,7 +11,10 @@ debhelper (12.10.1) UNRELEASED; urgency=medium
     (Closes: #955568)
   * dh_missing: Ditto.
 
- -- Niels Thykier <niels@thykier.net>  Wed, 25 Mar 2020 18:28:58 +0000
+  [ Helmut Grohne ]
+  * perl_makemaker.pm: Add missing import of "warning" function.
+
+ -- Niels Thykier <niels@thykier.net>  Wed, 15 Apr 2020 12:51:02 +0000
 
 debhelper (12.10) unstable; urgency=medium
 
