Fix typos in dh, dh_makeshlibs and debhelper.pod
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -1108,7 +1108,7 @@ B<--list-missing> like it was in compat 12.
 
 If you do not want the warning either, please omit the call to
 B<dh_missing>.  If you use the B<dh> command sequencer, then you can
-do this by inserting the an empty override target in the
+do this by inserting an empty override target in the
 F<debian/rules> file of the relevant package.  As an example:
 
     # Disable dh_missing
