--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,11 @@ debhelper (12.10.1) unstable; urgency=medium
     (Closes: #955568)
   * dh_missing: Ditto.
 
+  [ Chris Leick ]
+  * debhelper.pod: Fix typos.
+  * dh_makeshlibs: Ditto.
+  * dh: Ditto.
+
   [ Helmut Grohne ]
   * perl_makemaker.pm: Add missing import of "warning" function.
 
