Declare compat 13 as stable
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -899,8 +899,6 @@ This change may cause the tools to process more files than previously.
 
 =item v12
 
-This is the recommended mode of operation.
-
 Changes from v11 are:
 
 =over 8
@@ -1040,7 +1038,7 @@ third-party build system B<pybuild> instead.
 
 =item v13
 
-This compatibility level is still open for development; use with caution.
+This is the recommended mode of operation.
 
 Changes from v12 are:
 
@@ -1159,6 +1157,10 @@ you need previous behavior, override the flag:
     dh_auto_configure -- -DCMAKE_SKIP_INSTALL_ALL_DEPENDENCY=OFF ...
 
 =back
+
+=item v14
+
+This compatibility level is still open for development; use with caution.
 
 =back
 
