--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12.10.1) unstable; urgency=medium
+debhelper (13) UNRELEASED; urgency=medium
 
   [ Niels Thykier ]
   * debian/changelog: Fix typo of a bug number in the 12.10
