--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (13) UNRELEASED; urgency=medium
+debhelper (13) unstable; urgency=medium
 
   [ Niels Thykier ]
   * debian/changelog: Fix typo of a bug number in the 12.10
@@ -24,7 +24,7 @@ debhelper (13) UNRELEASED; urgency=medium
   [ Helmut Grohne ]
   * perl_makemaker.pm: Add missing import of "warning" function.
 
- -- Niels Thykier <niels@thykier.net>  Wed, 15 Apr 2020 12:51:02 +0000
+ -- Niels Thykier <niels@thykier.net>  Wed, 15 Apr 2020 14:44:56 +0000
 
 debhelper (12.10) unstable; urgency=medium
 
