--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (13.0.1) UNRELEASED; urgency=medium
+
+  * dh_installinitramfs: Remove misleading "in compat 12" as the
+    behaviour was unrelated to the compat level.
+
+ -- Niels Thykier <niels@thykier.net>  Fri, 17 Apr 2020 21:55:48 +0000
+
 debhelper (13) unstable; urgency=medium
 
   [ Niels Thykier ]
