Fix debhelper-compat Build-Depends example in German manpage

--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -1156,7 +1156,7 @@ msgid ""
 "  Build-Depends: debhelper-compat (= #RECOMMENDED_COMPAT#)\n"
 "\n"
 msgstr ""
-"  Build-Depends: debhelper-compat (>= #RECOMMENDED_COMPAT#)\n"
+"  Build-Depends: debhelper-compat (= #RECOMMENDED_COMPAT#)\n"
 "\n"
 
 #. type: textblock
