--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,10 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
     update-initramfs as a noawait trigger (replacing maintscript
     calls to "update-initramfs -u", which had the samme affect).
     (Closes: #822730).
+  * dh_installman: Improve error messages and handling of broken
+    section numbers.  Notably ignore (with a warning) sections from
+    manpages that look suspiciously like a version number.  Thanks
+    to Paul Gevers for reporting the bug.  (Closes: #958343)
 
  -- Niels Thykier <niels@thykier.net>  Fri, 17 Apr 2020 21:55:48 +0000
 
