Document typo fix in the German translation
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 debhelper (13.0.1) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * dh_installinitramfs: Remove misleading "in compat 12" as the
     behaviour was unrelated to the compat level.
   * dh_installinitramfs: Migrate to using declaratively triggering
@@ -10,6 +11,9 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
     section numbers.  Notably ignore (with a warning) sections from
     manpages that look suspiciously like a version number.  Thanks
     to Paul Gevers for reporting the bug.  (Closes: #958343)
+
+  [ Translations ]
+  * Fix typo in German translation.  (Andreas Bombe)
 
  -- Niels Thykier <niels@thykier.net>  Fri, 17 Apr 2020 21:55:48 +0000
 
