SequencerUtil.pm: Fix use of uninitialized variable warning
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
   * Dh_Lib.pm: Support that Architecture (among other fields) can be
     folded in d/control.  Thanks to Thorsten Glaser for reporting
     the issue.  (Closes: #958987)
+  * SequencerUtil.pm: Fix use of uninitialized variable warning.
 
   [ Translations ]
   * Fix typo in German translation.  (Andreas Bombe)
