d/changelog: Fix typos
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,7 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
     behaviour was unrelated to the compat level.
   * dh_installinitramfs: Migrate to using declaratively triggering
     update-initramfs as a noawait trigger (replacing maintscript
-    calls to "update-initramfs -u", which had the samme affect).
+    calls to "update-initramfs -u", which had the same affect).
     (Closes: #822730).
   * dh_installman: Improve error messages and handling of broken
     section numbers.  Notably ignore (with a warning) sections from
@@ -21,7 +21,7 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
     due to luck than by design.
   * Dh_Lib.pm: Provide HIGHEST_STABLE_COMPAT_LEVEL, which reflects
     the latest stable compat level.  Thanks to Jelmer Vernooĳ
-    for the suggstion.
+    for the suggestion.
 
   [ Translations ]
   * Fix typo in German translation.  (Andreas Bombe)
