Dh_Lib.pm: Use state feature (by using v5.24)
Replace most of the handrolling variants of "state" with the Perl
provided one.  At the same time, bump version requirement to v5.24
(available in oldstable).

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,8 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
     The new DH_DATAFILES is more general than DH_AUTOSCRIPTS and
     enable us to add new data file sources without investing new
     environment variables.
+  * Dh_Lib.pm: Require perl v5.24 (available in Debian oldstable)
+    to enable more modern features.
 
   [ Translations ]
   * Fix typo in German translation.  (Andreas Bombe)
