--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,8 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
     environment variables.
   * Dh_Lib.pm: Require perl v5.24 (available in Debian oldstable)
     to enable more modern features.
+  * Dh_Lib.pm: Fix a bug in variable substition where ${Tab}
+    incorrectly exanded to "\b" rather than "\t".
 
   [ Translations ]
   * Fix typo in German translation.  (Andreas Bombe)
