dh_installchangelogs.1: Loosly document upstream file patterns
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,10 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
     to enable more modern features.
   * Dh_Lib.pm: Fix a bug in variable substition where ${Tab}
     incorrectly exanded to "\b" rather than "\t".
+  * dh_installchangelogs.1: Loosely document which file names that
+    dh_installchangelogs uses as guesses for finding an upstream
+    changelog file.  Thanks to Laurent Bigonville for suggesting
+    the change.  (Closes: #933224)
 
   [ Translations ]
   * Fix typo in German translation.  (Andreas Bombe)
