Dh_Lib: Use abs. paths for HOME/XDG dirs [c13]
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,9 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
     dh_installchangelogs uses as guesses for finding an upstream
     changelog file.  Thanks to Laurent Bigonville for suggesting
     the change.  (Closes: #933224)
+  * Dh_Lib.pm: When setting HOME or XDG_RUNTIME_DIR in compat 13,
+    use an absolute path.  Thanks to Dmitry Shachnev for reporting
+    the issue.  (Closes: #959731)
 
   [ Translations ]
   * Fix typo in German translation.  (Andreas Bombe)
