dh_installsystemd.1: Improve docs for --no-stop-on-upgrade
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,8 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
   * Dh_Lib.pm: When setting HOME or XDG_RUNTIME_DIR in compat 13,
     use an absolute path.  Thanks to Dmitry Shachnev for reporting
     the issue.  (Closes: #959731)
+  * dh_installsystemd.1: Copy the description for the
+    --no-stop-on-upgrade option from dh_installinit.
 
   [ Translations ]
   * Fix typo in German translation.  (Andreas Bombe)
