dh.1: Document caveat with complete conditional hook targets
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -46,6 +46,10 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
     will.  Thanks to Axel Beckert for reporting the issue.
     (Closes: #959678)
   * dh_installinit: Ditto.
+  * dh.1: Explicitly document that hook targets can cause
+    complications when they are made unconditional by a makefile
+    target and suggest alternatives.  Thanks to Marcin Owsiany for
+    reporting this.  (Closes: #645873)
 
   [ Translations ]
   * Fix typo in German translation.  (Andreas Bombe)
